Adminovo prihvatanje i odbijanje predloga za password

--- a/Projekat/app/src/main/AndroidManifest.xml
+++ b/Projekat/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WiFinder">
-        <activity android:name=".AddNewObjectOnMapActivity"></activity>
+        <activity android:name=".WiFiSuggestionsOfAPlaceActivity"></activity>
+        <activity android:name=".AddNewObjectOnMapActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
